[package]
name = "pcg-mwc"
version = "0.1.0"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A fast non-cryptographic psudo random number generator"
documentation = "https://docs.rs/pcg-mwc"
repository = "https://github.com/tkaitchuck/Mwc256XXA64"
keywords = ["prng", "random", "rand", "pcg", "mwc"]
categories = ["algorithms", "no-std"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.2"
