[package]
name = "pcg-mwc"
version = "0.2.0"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A fast non-cryptographic psudo random number generator"
documentation = "https://docs.rs/pcg-mwc"
repository = "https://github.com/tkaitchuck/Mwc256XXA64"
keywords = ["prng", "random", "rand", "pcg", "mwc"]
categories = ["algorithms", "no-std"]
edition = "2018"
readme = "README.md"

[features]
serde1 = ["serde"]

[dependencies]
rand_core = "0.6.2"
serde = { version = "1", optional = true, features=["derive"]}
