[package]
name = "pcg-mwc-test"
version = "0.1.0"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
path = "test/bench.rs"
harness = false

[dependencies]
pcg-mwc = { path = "../impl" }
primal = "0.3.0"
glass_pumpkin = "0.4.0"
rand = "0.8"
rand_core = "0.6.0"
rayon = "1.5.0"
image = "0.23.12"
ahash = "0.6.2"

[dev-dependencies]
criterion = "0.3.3"
rand_pcg = "0.3.0"
rand_xoshiro = "0.6.0"